SWIG (Simplified Wrapper and Interface Generator)

The Guile Support Patch for 1.3a5
=================================

3/1/2001 : mkoeppe
	   [Guile] Added support for Guile 1.4.1 procedure
	   documentation formats.

2/26/2001: mkoeppe
	   [Guile] Made the wrapper code compile with C++ if the
	   "-c++" command-line switch is given.  Thanks to
	   <monkeyiq@dingoblue.net.au>. 

2/26/2001: mkoeppe
	   [Guile] Now two type tables, swig_types and
	   swig_types_initial, are used, as all other SWIG language
	   modules do.  This removes the need for the tricky
	   construction used before that the broken Redhat 7.0 gcc
	   doesn't parse. Reported by <monkeyiq@dingoblue.net.au>. 

2/26/2001: mkoeppe
	   [Guile] Fixed typemaps for char *OUTPUT, char *BOTH; a bad
	   free() would be emitted.  Added typemap for SCM.


Version 1.3 Alpha 5 
===================

9/19/00 : beazley
          [Python] Python module generates more efficient code for
          creating the return value of a wrapper function. Modification
          suggested by Jon Travis.

9/19/00 : beazley
          Library files specified with the -l option are now included at the
          end of the interface file (reverting to the old behavior).

9/19/00 : beazley
          Fixed some problems with enum handling.  enums are now manipulated as
          'int', but cast into the enum type when values are passed to the 
          corresponding C function.

9/19/00 : mkoeppe
	  [Guile] Removed "-with-smobs" command-line option, as this is the
	  default now.  Added "-emit-setters" command-line option,
	  which turns on generating procedures-with-setters; see
	  internals.html.

9/18/00 : mkoeppe
	  Incorporated patch #101430, fixing bugs in the Guile module: 
	  1. Some arguments were erroneously taken as *optional* arguments when
	     ignored arguments were present. 
	  2. Guile 1.3.4 was not supported since functions introduced in Guile
	      1.4 were used.	  
	  3. Added handling of `const char *'.
